--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.kidsbrain">
+
     <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -9,7 +11,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.KidsBrain">
-        <activity android:name=".activity.Inscription"></activity>
+        <activity android:name=".activity.AdditionGame"></activity>
+        <activity android:name=".activity.Inscription" />
         <activity android:name=".activity.Login" />
         <activity android:name=".activity.TestRetro" />
         <activity
