--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,18 +3,23 @@
     package="com.example.kidsbrain">
 
     <uses-permission android:name="android.permission.INTERNET" />
-
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.KidsBrain">
-        <activity android:name=".activity.AdditionGame"></activity>
+        android:theme="@style/Theme.KidsBrain"
+        android:usesCleartextTraffic="true">
+
+        <activity android:name=".activity.game.AdditionGame"></activity>
         <activity android:name=".activity.Inscription" />
         <activity android:name=".activity.Login" />
         <activity android:name=".activity.TestRetro" />
+        <activity android:name=".activity.video.VideoPlay" />
         <activity
             android:name=".activity.Homes"
             android:label="Home" />
