--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,9 +28,13 @@ android {
     }
 
 }
+repositories {
+    maven {
+        url 'https://repo.brightcove.com/releases'
+    }
+}
 
 dependencies {
-
     implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation 'com.android.support.constraint:constraint-layout:2.0.4'
     implementation 'com.android.support:design:28.0.0'
@@ -45,9 +49,9 @@ dependencies {
     implementation 'com.jakewharton.picasso:picasso2-okhttp3-downloader:1.1.0'
     implementation 'org.mongodb:mongodb-driver:3.12.11'
     implementation 'com.github.bumptech.glide:glide:4.13.0'
+    implementation "com.brightcove.player:exoplayer2:6.18.1"
     annotationProcessor 'com.github.bumptech.glide:compiler:4.13.0'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
-
 }
