--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,6 +6,7 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -14,15 +15,18 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.KidsBrain"
         android:usesCleartextTraffic="true">
-
-        <activity android:name=".activity.game.AdditionGame"></activity>
+        <activity android:name=".activity.game.SoustractionGame"></activity>
+        <activity android:name=".activity.game.AdditionGame" />
         <activity android:name=".activity.Inscription" />
         <activity android:name=".activity.Login" />
         <activity android:name=".activity.TestRetro" />
-        <activity android:name=".activity.video.VideoPlay" android:screenOrientation="landscape"/>
+        <activity
+            android:name=".activity.video.VideoPlay"
+            android:screenOrientation="landscape" />
         <activity
             android:name=".activity.Homes"
-            android:label="Home" android:configChanges="uiMode"/>
+            android:configChanges="uiMode"
+            android:label="Home" />
         <activity android:name=".activity.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
