--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,9 +14,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.KidsBrain"
-        android:usesCleartextTraffic="true">
+        android:usesCleartextTraffic="true"
+        android:name=".model.NotificationApp">
         <activity android:name=".activity.game.SoustractionGame"></activity>
         <activity android:name=".activity.game.CouleurActivity"></activity>
+        <activity android:name=".activity.game.TicTacToeGame"></activity>
         <activity android:name=".activity.game.AdditionGame" />
         <activity android:name=".activity.Inscription" />
         <activity android:name=".activity.Login" />
